# openai-guardrails-python

./: Makefile  README.md  mkdocs.yml  openai-guardrails-docs-setup.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: agents_sdk_integration.md  evals.md  examples.md  index.md  quickstart.md  streaming_output.md
docs/ref/checks/: custom_prompt_check.md  hallucination_detection.md  jailbreak.md  llm_base.md  nsfw.md  off_topic_prompts.md  pii.md  prompt_injection_detection.md
examples/basic/: agents_sdk.py  azure_implementation.py  custom_context.py  hello_world.py  local_model.py  multi_bundle.py  multiturn_chat_with_alignment.py  pii_check.py  pii_mask_example.py  structured_outputs_example.py  suppress_tripwire.py
examples/hallucination_detection/: run_hallucination_detection.py
examples/implementation_code/blocking/: blocking_agents.py  blocking_completions.py  blocking_responses.py
examples/implementation_code/fast/: fast_completions.py  fast_responses.py
examples/internal_examples/: custom_context.py
src/guardrails/: __init__.py  _base_client.py  _openai_utils.py  _streaming.py  agents.py  cli.py  client.py  context.py  exceptions.py  guardrail.py  items.py  output.py  registry.py  run.py  run_context.py  runtime.py  strict_schema.py  types.py
tests/: __init__.py  conftest.py
tests/integration/: test_guardrails.py  test_suite.py
tests/unit/: test_agents.py  test_base_client.py  test_client_async.py  test_client_sync.py  test_registry.py  test_resources_responses.py  test_response_flattening.py  test_runtime.py  test_safety_identifier.py  test_spec.py  test_types.py
(+54 files in other folders)
